# juniper-mcp-v1

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  COPYRIGHT  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  QUICK_START.md  README.md  SETUP_NETWORK_DEVICES.md  devices-template.json  docker-compose.http.yml  jmcp.py  jmcp_token_manager.py  pyproject.toml  requirements.txt  test_config_validation.py  test_invalid_devices.json  test_junos_cli.py
docs/: WARP_TERMINAL_GUIDE.md  junos-mcp-server-article.html  mcp-flow-diagram.md
utils/: __init__.py  config.py
