[project]
name = "junos-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "junos-eznc>=2.7.4",
    "jxmlease>=1.0.3",
    "lxml>=6.0.0",
    "mcp[cli]>=1.12.2",
    "ncclient>=0.6.15",
    "paramiko>=3.5.1",
    "psutil>=7.0.0",
    "pyserial>=3.5",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]
